--- a/sup archives maths/C18/cours.tex
+++ b/sup archives maths/C18/cours.tex
@@ -21,4 +21,8 @@
     Si de plus pour tout $k \in \llbracket 0,n \rrbracket$, $\displaystyle \lim_{x \to x_0} f^{(k)}(x) \in \mb{R}$, alors $f$ peut être prolongée sur $I$ en une fonction $\tilde{f}$ de classe $\mc{C}^n$ sur $I$ vérifiant alors :$$\forall k \in \llbracket 0,n\rrbracket, \tilde{f}^{(k)}(x_0) = \lim_{x \to x_0} f^{(k)}(x)$$ 
 \end{theoreme}
 
+\begin{proposition}{9.22}{concernant les graphes fortement connexes}
+    Tout graphe fortement connexe à $n \in \N^*$ sommets possède au moins $n-1$ arêtes.
+\end{proposition}
+
 \input{../../stock/pied.tex}
