--- a/Informatique spé/Algos/code.tex
+++ b/Informatique spé/Algos/code.tex
@@ -3,7 +3,7 @@
 \begin{adjustwidth}{-3cm}{-3cm}
 \input{../../stock/commands.tex}
 
-\begin{implementation}{1}{tri par fusion}
+\begin{implementation}{tri par fusion}
     \begin{lstOCaml}
     let rec casser l =
         match l with
@@ -33,50 +33,91 @@
     \end{lstOCaml}
 \end{implementation}
 
-\begin{implementation}{2}{parcours en largeur d'un graphe}
+\begin{implementation}{parcours en largeur d'un graphe (1/3)}
     \begin{lstOCaml}
-        type file = {e:int list; s:int list}
-            
-        let file_vide = {e=[]; s=[]}             
+    type file = {e:int list; s:int list}
+    type graphe = int list array 
         
-        let rec ajoute f liste = match liste with
-            | [] -> f
-            | elt::q -> ajoute {e=(elt::f.e); s=f.s} q 
-                
-        let pop_opt f = 
-            let rec retourne sub_f =
-                match sub_f.e with
-                | [] -> sub_f
-                | elt::q -> retourne {e=q; s=elt::sub_f.s}   
-            in let new_f = 
-                if f.s = [] then
-                    retourne f 
-                else f 
-            in match new_f.s with 
-            | [] -> file_vide, None
-            | elt::q -> {e=new_f.e; s=q}, Some elt
-                        
-          
-                           
-        type graphe = int list array 
-            
-        let parcours_largeur g s =
-            let n = Array.length g in
-            let non_vus = Array.make n true in
-            let rec parcours f =
-                match (pop_opt f) with
-                | _, None -> ()
-                | new_f, Some v when non_vus.(v) ->
-                    non_vus.(v) <- false;
-                    print_int v;
-                    parcours (ajoute new_f g.(v))
-                | new_f, Some v ->
-                    parcours new_f
-            in parcours {e=[]; s=[s]} 
+    let file_vide = {e=[]; s=[]}             
+    
+    let rec ajoute f liste = match liste with
+        | [] -> f
+        | elt::q -> ajoute {e=(elt::f.e); s=f.s} q 
     \end{lstOCaml}
 \end{implementation}
 
-\begin{implementation}{3}{file d'entiers}
+\begin{implementation}{parcours en largeur d'un graphe (2/3)}
+    \begin{lstOCaml}
+    let pop_opt f = 
+        let rec retourne sub_f =
+            match sub_f.e with
+            | [] -> sub_f
+            | elt::q -> retourne {e=q; s=elt::sub_f.s}   
+        in let new_f = 
+            if f.s = [] then
+                retourne f 
+            else f 
+        in match new_f.s with 
+        | [] -> file_vide, None
+        | elt::q -> {e=new_f.e; s=q}, Some elt
+    \end{lstOCaml}
+\end{implementation}
+
+\begin{implementation}{parcours en largeur d'un graphe (3/3)}
+    \begin{lstOCaml}
+    let parcours_largeur g s =
+        let n = Array.length g in
+        let non_vus = Array.make n true in
+        let rec parcours f =
+            match (pop_opt f) with
+            | _, None -> ()
+            | new_f, Some v when non_vus.(v) ->
+                non_vus.(v) <- false;
+                print_int v;
+                parcours (ajoute new_f g.(v))
+            | new_f, Some v ->
+                parcours new_f
+        in parcours {e=[]; s=[s]} 
+    \end{lstOCaml}
+\end{implementation}
+
+\begin{implementation}{liste chainée en C (1/3)}
+    \begin{lstC}
+    typedef int elemtype;
+
+    struct Maillon{
+        elemtype val;
+        struct Maillon* suivant;
+    };
+    typedef struct Maillon maillon;
+
+    \end{lstC}
+\end{implementation}
+
+\begin{implementation}{liste chainée en C (2/3)}
+    \begin{lstC}
+    maillon* ajoute(elemtype x, maillon* c){
+        maillon* res = malloc(sizeof(maillon));
+        assert(res != NULL);
+        res->val = x;
+        res->suivant = c;
+        return res;
+    };
+    \end{lstC}
+\end{implementation}
+
+\begin{implementation}{liste chainée en C (3/3)}
+    \begin{lstC}
+    int main(){
+        maillon* a = ajoute(1,NULL);
+        a = ajoute(2,a);
+        a = ajoute(3,a);
+        return 0;
+    };
+    \end{lstC}
+\end{implementation}
+
+\begin{implementation}{file d'entiers}
     \begin{lstC}
     struct Maillon{
         int val;
