--- a/stock/commands.tex
+++ b/stock/commands.tex
@@ -30,6 +30,7 @@
 \renewcommand{\div}[0]{\mathrm{div}\,}
 \newcommand{\rot}[0]{\vec{\mathrm{rot}}\,}
 \newcommand{\vnabla}[0]{\vec{\nabla}}
+\newcommand{\spectre}[0]{\mathrm{Sp}}
 \renewcommand{\vec}[1]{\overrightarrow{#1}}
 \newcommand{\mat}[1]{\mathrm{Mat}_{#1}}
 \newcommand{\matrice}[1]{\mathcal{M}_{#1}}
