--- a/spé archives maths/C07/cours.tex
+++ b/spé archives maths/C07/cours.tex
@@ -27,4 +27,8 @@
     $$\forall \lambda \in \spectre(u),\, \dim\big(E_\lambda(u)\big) = m_\lambda$$
 \end{theoreme}
 
+\begin{theoreme}{7.9}{caractérisation de la diagonalisabilité par le polynôme minimal}
+    Soit $E$ un $\K$-espace vectoriel de dimension finie $n$ et $u$ un endomorphisme de $E$. $u$ est diagonalisable si et seulement si $\mu_u$ est scindé à racines simples.
+\end{theoreme}
+
 \input{../../stock/pied.tex}
