--- a/stock/commands.tex
+++ b/stock/commands.tex
@@ -45,7 +45,8 @@
 \newcommand{\distance}[2]{\mathrm{d}(#1,\,#2)}
 \newcommand{\inte}[2]{\int_{#1}^{#2}}
 \newcommand{\somme}[2]{\sum_{#1}^{#2}}
-\newcommand{\deriveref}[4]{\biggl( \frac{\text{d}^{#1}#2}{\text{d}#3^{#1}} \biggr)_{#4}}
+\newcommand{\derive}[3]{\frac{\text{d}^{#1}#2}{\text{d}#3^{#1}}}
+\newcommand{\derivepar}[3]{\frac{\partial^{#1}#2}{\partial#3^{#1}}}
 
 
 
