--- a/spé archives maths/C07/cours.tex
+++ b/spé archives maths/C07/cours.tex
@@ -31,4 +31,15 @@
     Soit $E$ un $\K$-espace vectoriel de dimension finie $n$ et $u$ un endomorphisme de $E$. $u$ est diagonalisable si et seulement si $\mu_u$ est scindé à racines simples.
 \end{theoreme}
 
+\begin{definition}{7.14}{endomorphisme trigonalisable}
+    Soit $E$ un $\K$-espace vectoriel de dimension finie $n$ et $u$ un endomorphisme de $E$. On dit que \notion{$u$ est trigonalisable} s'il existe une base $\mc{B}$ de $E$ dans laquelle la matrice de $u$ est triangulaire supérieure.
+\end{definition}
+
+\begin{proposition}{7.17}{point commun entre polynômes caractéristique et minimal}
+    Soit $E$ un $\K$-espace vectoriel de dimension finie $n$ et $u$ un endomorphisme de $E$. $\chi_u$ est scindé si et seulement si $\mu_u$ est scindé.
+\end{proposition}
+
+\begin{theoreme}{7.18}{caractérisation de la trigonalisabilité}
+    Soit $E$ un $\K$-espace vectoriel de dimension finie $n$ et $u$ un endomorphisme de $E$. $u$ est trigonalisable si et seulement si ses polynômes caractéristique et minimal sont scindés (c'est équivalent).
+\end{theoreme}
 \input{../../stock/pied.tex}
