--- a/physique spé/potentiel electrique condensateur/cours.tex
+++ b/physique spé/potentiel electrique condensateur/cours.tex
@@ -14,6 +14,11 @@
     $$\vec{E} = - \grad V$$
 \end{definition}
 
+\begin{definition}{4.3}{circulation d'une fonction vectorielle le long d'un chemin}
+    Soit $\vec{A}$ une fonction vectorielle et $AB$ un chemin de l'espace. On appelle \notion{circulation de $A$ le long du chemin $AB$} l'intégrale~:
+    $$\mc{C} = \inte{M \in AB}{}\vec{A}(M) \cdot \d{\vec{OM}}$$
+\end{definition}
+
 
 
 
