--- a/maths spé/C07/cours.tex
+++ b/maths spé/C07/cours.tex
@@ -42,4 +42,6 @@
 \begin{theoreme}{7.18}{caractérisation de la trigonalisabilité}
     Soit $E$ un $\K$-espace vectoriel de dimension finie $n$ et $u$ un endomorphisme de $E$. $u$ est trigonalisable si et seulement si ses polynômes caractéristique et minimal sont scindés (c'est équivalent).
 \end{theoreme}
+
+$$\fonction{f}{\Z/np\Z}{\Z/n\Z \times \Z /p\Z}{\mr{cl}_{np}(x)}{\big(\mr{cl}_n(x),\, \mr{cl}_p(x)\big)}$$
 \input{../../stock/pied.tex}
