--- a/physique spé/potentiel electrique condensateur/cours.tex
+++ b/physique spé/potentiel electrique condensateur/cours.tex
@@ -10,7 +10,7 @@
 \end{theoreme}
 
 \begin{definition}{4.2}{potentiel électrostatique}
-    On appelle \notion{potentiel électrostatique} le champ scalaire $V$ tel que $\vec{E}$ en dérive~:
+    On appelle \notion{potentiel électrostatique} le champ scalaire $V$ tel que, \underline{en régime stationnaire}, $\vec{E}$ en dérive~:
     $$\vec{E} = - \grad V$$
 \end{definition}
 
@@ -19,6 +19,23 @@
     $$\mc{C} = \inte{M \in AB}{}\vec{A}(M) \cdot \d{\vec{OM}}$$
 \end{definition}
 
+\begin{theoreme}{4.4}{équation de Poisson}
+    Dans un milieu de densité volumique de charge $\rho$, en régime stationnaire, le potentiel électrostatique vérifie en tout point $M$ de l'espace~:
+    $$\Delta V = - \frac{\rho(M)}{\epsilon_0}$$
+    L’équation de Poisson est une équation locale qui relie directement le potentiel à la distribution de charges.
+\end{theoreme}
+
+\begin{definition}{4.5}{ligne de champ}
+    Une \notion{ligne de champ} est une courbe tangente en tout point au champ étudié, orientée dans le sens de ce champ.
+\end{definition}
+
+\begin{definition}{4.6}{surface équipotentielle}
+    Une \notion{surface équipotentielle} est une surface sur laquelle le potentiel électrostatique est le même en tout point.
+\end{definition}
+
+\begin{proposition}{4.7}{lien entre surfaces équipotentielles et lignes de champs}
+    Les lignes de champ électrostatique sont orthogonales aux équipotentielles. 
+\end{proposition}
 
 
 
