--- a/stock/commands.tex
+++ b/stock/commands.tex
@@ -47,7 +47,12 @@
 \newcommand{\somme}[2]{\sum_{#1}^{#2}}
 \newcommand{\derive}[3]{\frac{\text{d}^{#1}#2}{\text{d}#3^{#1}}}
 \newcommand{\derivepar}[3]{\frac{\partial^{#1}#2}{\partial#3^{#1}}}
-
+\newcommand{\fonction}[5]{%
+  \begin{align*}
+    #1 :\ & #2 \longrightarrow #3 \\
+          & #4 \longmapsto #5
+  \end{align*}
+}
 
 
 
