--- a/stock/commands.tex
+++ b/stock/commands.tex
@@ -36,7 +36,8 @@
 \newcommand{\matrice}[1]{\mathcal{M}_{#1}}
 \newcommand{\sgEngendre}[1]{\left\langle #1 \right\rangle}
 \newcommand{\gpquotient}[1]{\mathbb{Z} / #1\mathbb{Z}}
-\newcommand{\norme}[1]{||#1||}
+\newcommand{\norme}[1]{\lVert#1\rVert}
+\newcommand{\normet}[1]{||| #1 |||}
 \renewcommand{\d}[1]{\,\mathrm{d}#1}
 \newcommand{\adh}[1]{\overline{#1}}
 \newcommand{\intint}[2]{\llbracket #1 ,\, #2 \rrbracket}
