--- a/spé archives maths/C05/cours.tex
+++ b/spé archives maths/C05/cours.tex
@@ -44,10 +44,7 @@
 
 \begin{proposition}{5.5}{caractérisation du caractère direct}
     Soit $E$ un $\K$-espace vectoriel et $(F_1, \dots , F_p)$ une famille d'au moins deux sous-espaces vectoriels de $E$. La somme $ \displaystyle  \somme{i=1}{p}F_i$ est directe si et seulement si~:
-    \begin{cases*}
-        \displaystyle \somme{i=1}{p-1} F_i \text{ est directe ;}\\
-        \displaystyle \bigg( \bigoplus_{i=1}^{p-1} F_i \bigg) \cap F_p = \{0_E\}.
-    \end{cases*}
+        $$ \bigg( \bigoplus_{i=1}^{p-1} F_i \bigg) \cap F_p = \{0_E\}.$$
 \end{proposition}
 
 \begin{proposition}{5.9}{dimension d'une somme d'espaces vectoriels de dimiension finie}
@@ -73,7 +70,7 @@ De plus l’égalité est vérifiée si et seulement si la somme est directe.
 
 \begin{proposition}{5.44}{expression du polynôme caractéristique d'un endomorphisme}
     Soit $E$ un $\K$-espace vectoriel de dimension finie $n$ et $u \in \mc{L}(E)$. On a~:
-    $$\chi_u = X^n - \mr{tr}(u)X^{n-1} + \dots + (-1)^n\det(A)$$
+    $$\chi_u = X^n - \mr{tr}(u)X^{n-1} + \dots + (-1)^n\det(u)$$
     
 \end{proposition}
 
