--- a/flash_card.tex
+++ b/flash_card.tex
@@ -56,7 +56,7 @@
 \newcommand{\inte}[2]{\int_{#1}^{#2}}
 \newcommand{\somme}[2]{\sum_{#1}^{#2}}
 
-
+$$x \in \{\frac{77}{8} \pm \frac{\sqrt{3093}}{4}\}$$
 
 
 \end{adjustwidth}
