--- a/maths spé/C06/cours.tex
+++ b/maths spé/C06/cours.tex
@@ -4,7 +4,7 @@
 \input{../../stock/commands.tex}
 
 \begin{definition}{6.16}{ensemble $\ell^1(E)$}
-    Si $E$ est un $\K$-espace vectoriel normé,\, on note $\ell^1(E)$ l'ensemble des séries à termes dans $E^\N$ absolument convergentes. L'application suivante est alors une norme de $\ell^1(E)$~:
+    Si $E$ est un $\K$-espace vectoriel normé,\, on note $\ell^1(E)$ l'ensemble des suites de $E^\N$ dont la série associée absolument convergente. L'application suivante est alors une norme de $\ell^1(E)$~:
     $$\fonction{N_1}{\ell^1(E)}{\R_+}{u}{\somme{n=0}{+\infty}\norme{u_n}_E}$$
 \end{definition}
 
