--- a/Informatique spé/Algos/code.tex
+++ b/Informatique spé/Algos/code.tex
@@ -240,12 +240,12 @@
     let tbmin_pop tbmin =
         if tbmin.nb_elts = 0 then None else
     
-        (*remplacement de la première case par la dernière*)
+     (* remplacement de la première case par la dernière *)
         let res =  tbmin.data.(0) in 
         tbmin.data.(0) <- tbmin.data.(tbmin.nb_elts-1);
         tbmin.nb_elts <- tbmin.nb_elts - 1;
     
-        (*redimensionnement*)
+     (* redimensionnement *)
         let n = Array.length tbmin.data in
         if tbmin.nb_elts <= n/2 then 
             redim tbmin (n/2);
@@ -253,6 +253,54 @@
         (*percolations du nouveau premier élément*)
         percole_bas tbmin 0;
         Some res
+    \end{lstOCaml}
+\end{implementation}
+
+\begin{implementation}{algorithme de Dijkstra (1/2)}
+    On suppose implémentée la structure de file de priorité min.
+    \begin{lstOCaml}
+    let algo_dijkstra (g:graphe) (s:char) (t:char) =
+        let non_vus = Array.make 256 true in
+     (* le prédécesseur de chaque sommet *)
+        let pred = Array.make 256 '\000' in 
+     (* mémoïsation : distances de s à chaque sommet *)
+        let dist = Array.make 256 max_int in 
+        dist.(int_of_char s) <- 0;
+        let file_p = tbmin_vide () in
+        tbmin_ajoute file_p s 0;
+    
+        let rec reconstruire chemin (sommet:char) =
+            match sommet with
+            | '\000' -> chemin
+            | _ -> reconstruire (sommet::chemin) pred.(int_of_char sommet)
+    \end{lstOCaml}
+\end{implementation}
+
+\begin{implementation}{algorithme de Dijkstra (2/2)}
+    \begin{lstOCaml}
+        in let rec traitement u voisins =
+         (* pour chaque voisin v de u, si favorable, 
+            on remplace par la distance la plus courte puis on avance, 
+            sinon on avance directement *)
+            match voisins with
+            | [] -> ()
+            | (v,w)::q  when non_vus.(int_of_char v) && 
+              dist.(int_of_char u) + w < dist.(int_of_char v) ->
+                dist.(int_of_char v) <- dist.(int_of_char u) + w;
+                tbmin_ajoute file_p v dist.(int_of_char v);
+                pred.(int_of_char v) <- u;
+                traitement u q
+            | (v,w)::q -> traitement u q
+
+        in let rec parcours () = 
+            match tbmin_pop file_p with
+            | None -> failwith "chemin inexistant"
+            | Some (u,_) when u=t -> reconstruire [] u
+            | Some (u,p) when non_vus.(int_of_char u) ->
+                non_vus.(int_of_char u) <- false;
+                traitement u g.(int_of_char u);
+                parcours ()
+            | Some _ -> parcours ()
     \end{lstOCaml}
 \end{implementation}
 
